# sechatr

./: CMakeLists.txt  Dockerfile  README.md  server.cpp  server.h  websocketserver.cpp
src/: CMakeLists.txt  client.cpp  client.h  coordinator.cpp  coordinator.h  httpserver.cpp  httpserver.h  main.cpp  poll.cpp  poll.h  pollmanager.cpp  pollmanager.h  proxy.cpp  proxy.h  resources.qrc  room.cpp  room.h  websocketserver.cpp  websocketserver.h
src/static/: index.html
src/static/js/: chatstatus.js  chatstatus.user.js
